--- a/firstproject/bin/.project
+++ b/firstproject/bin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>firstproject</name>
+	<name>monsterkiller</name>
 	<comment></comment>
 	<projects>
 	</projects>
